apollo-router/src/plugins/telemetry/config_new/snapshots/uhg_custom_appollo_roouter__plugins__telemetry__config_new__events__tests__router_events@logs.snap
---
source: apollo-router/src/plugins/telemetry/config_new/events.rs
assertion_line: 860
expression: yaml
---
- fields:
    kind: router.request
  level: INFO
  message: ""
  span:
    http.flavor: HTTP/1.1
    http.method: GET
    http.request.method: GET
    http.route: "http://example.com/"
    name: router
    otel.kind: INTERNAL
    trace_id: ""
  spans:
    - http.flavor: HTTP/1.1
      http.method: GET
      http.request.method: GET
      http.route: "http://example.com/"
      name: router
      otel.kind: INTERNAL
      trace_id: ""
- fields:
    kind: my.request_event
  level: INFO
  message: my event message
  span:
    http.flavor: HTTP/1.1
    http.method: GET
    http.request.method: GET
    http.route: "http://example.com/"
    name: router
    otel.kind: INTERNAL
    trace_id: ""
  spans:
    - http.flavor: HTTP/1.1
      http.method: GET
      http.request.method: GET
      http.route: "http://example.com/"
      name: router
      otel.kind: INTERNAL
      trace_id: ""
