apollo-router/src/plugins/telemetry/config_new/snapshots/uhg_custom_appollo_roouter__plugins__telemetry__config_new__events__tests__router_events_graphql_error@logs.snap
---
source: apollo-router/src/plugins/telemetry/config_new/events.rs
assertion_line: 897
expression: yaml
---
- fields:
    kind: router.response
  level: INFO
  message: ""
  span:
    apollo_private.duration_ns: "[duration]"
    http.flavor: HTTP/1.1
    http.method: GET
    http.request.method: GET
    http.route: "http://example.com/"
    name: router
    otel.kind: INTERNAL
    trace_id: ""
  spans:
    - apollo_private.duration_ns: "[duration]"
      http.flavor: HTTP/1.1
      http.method: GET
      http.request.method: GET
      http.route: "http://example.com/"
      name: router
      otel.kind: INTERNAL
      trace_id: ""
