apollo-router/src/plugins/telemetry/config_new/snapshots/uhg_custom_appollo_roouter__plugins__telemetry__config_new__events__tests__supergraph_events@logs.snap
---
source: apollo-router/src/plugins/telemetry/config_new/events.rs
assertion_line: 962
expression: yaml
---
- fields:
    kind: supergraph.request
  level: INFO
  message: ""
  span:
    apollo_private.field_level_instrumentation_ratio: 0.01
    apollo_private.graphql.variables: "{}"
    graphql.document: "query { foo }"
    name: supergraph
    otel.kind: INTERNAL
  spans:
    - apollo_private.field_level_instrumentation_ratio: 0.01
      apollo_private.graphql.variables: "{}"
      graphql.document: "query { foo }"
      name: supergraph
      otel.kind: INTERNAL
- fields:
    kind: my.request.event
  level: INFO
  message: my event message
  span:
    apollo_private.field_level_instrumentation_ratio: 0.01
    apollo_private.graphql.variables: "{}"
    graphql.document: "query { foo }"
    name: supergraph
    otel.kind: INTERNAL
  spans:
    - apollo_private.field_level_instrumentation_ratio: 0.01
      apollo_private.graphql.variables: "{}"
      graphql.document: "query { foo }"
      name: supergraph
      otel.kind: INTERNAL
