apollo-router/src/plugins/telemetry/config_new/snapshots/uhg_custom_appollo_roouter__plugins__telemetry__config_new__events__tests__supergraph_events_with_exists_condition@logs.snap
---
source: apollo-router/src/plugins/telemetry/config_new/events.rs
assertion_line: 1008
expression: yaml
---
- fields:
    kind: my.event
  level: INFO
  message: Auditing Router Event
  span:
    apollo_private.field_level_instrumentation_ratio: 0.01
    apollo_private.graphql.variables: "{}"
    graphql.document: "query Test { foo }"
    graphql.operation.name: Test
    name: supergraph
    otel.kind: INTERNAL
  spans:
    - apollo_private.field_level_instrumentation_ratio: 0.01
      apollo_private.graphql.variables: "{}"
      graphql.document: "query Test { foo }"
      graphql.operation.name: Test
      name: supergraph
      otel.kind: INTERNAL
